<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:src="@mipmap/btn_back_detail_normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@color/colorBorder" />

            <TextView
                android:id="@+id/search_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/searchFrom" />

            <EditText
                android:id="@+id/edit_search"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null" />

            <ImageView
                android:id="@+id/camera_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/android_icon_camera" />
        </RelativeLayout>

        <Button
            android:id="@+id/bu_search"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="3"
            android:background="@drawable/but_shape"
            android:text="@string/search"
            android:textColor="@color/colorWhite2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <ImageView
                android:id="@+id/pic_history"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:src="@mipmap/history"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_toRightOf="@id/pic_history"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <ListView
            android:id="@+id/lv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>
    <TextView
        android:id="@+id/clear_history"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:visibility="gone"/>
</LinearLayout>
