<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_color"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/p_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_back_detail_normal"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/particulars"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/p_googs_pic"
                android:layout_width="match_parent"
                android:layout_height="250dp"></ImageView>
            <TextView
                android:id="@+id/p_goods_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:background="@color/colorWhite2"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/p_goods_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorPrice"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite2"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite2"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/area_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/if_store_cn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    />
            </RelativeLayout>
            <ImageView
                android:id="@+id/xiangqing"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="商品详情"
                android:textSize="21sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"/>
            <com.bwie.shopping.view.MyWebView
                android:id="@+id/p_webview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.bwie.shopping.view.MyWebView>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/shop"
            />
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/kefu"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="50dp"
            android:src="@mipmap/shoucang"/>
        <Button
            android:id="@+id/buy_now"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/buynow"
            android:background="@drawable/bg_color"
            android:textColor="@color/colorWhite2"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
        <Button
            android:id="@+id/add_cart"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/addcart"
            android:textColor="@color/colorWhite2"
            android:background="#ff9c02"
            android:layout_toLeftOf="@id/buy_now"
            android:layout_alignParentBottom="true"
            />
    </LinearLayout>
</LinearLayout>
